--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddJournalActivity"></activity>
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".StatementActivity" />
+        <activity android:name=".MoreJournalsActivity" />
+        <activity android:name=".AddCategoryActivity" />
+        <activity android:name=".AddJournalActivity" />
         <activity android:name=".AddBookActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
