实现了识图记账的功能，基本实现所有功能，还差优化吧

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xiong.bearbooks">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".MyApplication"
@@ -10,7 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".AddJournalPlusActivity"></activity>
+        <activity android:name=".OCRAddJournalActivity" />
+        <activity android:name=".ModifyUserActivity" />
+        <activity android:name=".LoginActivity" />
         <activity android:name=".StatementActivity" />
         <activity android:name=".MoreJournalsActivity" />
         <activity android:name=".AddCategoryActivity" />
